@@ -1,3 +1,8 @@
+2004-03-03  Al Riddoch  <alriddoch@zepler.org>
+
+	* skstream/skstream.h, skstream/skstream.cpp: Add a virtual
+	  destructor to basic_socket interface.
+
 2004-01-14  Al Riddoch  <alriddoch@zepler.org>
 
 	* test/basicskstreamtest.h: Socket buffers are now automatically
